<resources>
    <string name="app_name">Мгновенный Кредит</string>
    <string name="stavka">Ставка</string>
    <string name="FirstCredit">Первый кредит</string>
    <string name="first_credit">Первый кредит</string>
    <string name="more_one">Повторный кредит:</string>
    <string name="needs_to_man">Умови отримання кредита</string>
    <string name="needs_to_get_loan">УСЛОВИЯ ПОЛУЧЕНИЯ ЗАЙМА</string>
    <string name="primer">"Сумма и срок займа: 12000 гривен на 149 дней
Комиссия за пользование кредитом: 1% в день (120 гривен/день)
Общая сумма комиссии: 17880 гривен
Общая сумма к возврату с учетом суммы займа: 29880 гривен
ПСК (полная стоимость кредита) в процентах составляет 149% годовых "</string>
    <string name="prolongation">ПРОЛОНГАЦИЯ</string>
    <string name="possibility">"ПОСЛЕДСТВИЯ НЕВЫПЛАТЫ ЗАЙМА"</string>
    <string name="not_paying">В случае нарушения сроков выплаты онлайн займа, размер неустойки может составить 0,10% от общей суммы просрочки в день, но не более 10% от суммы всего кредита.
</string>
    <string name="example">ПРИМЕР РАССЧЕТА ЗАЙМА</string>
    <string name="age">Возраст</string>
    <string name="facebook_app_id">1689220707914617</string>
    <string name="top_bar_name">ТВОЙ КРЕДИТ ОНЛАЙН</string>
    <string name="percent_rate">Процентная ставка</string>
    <string name="fire_date">Строк погашения</string>
    <string name="get_credit">ОФОРМИТЬ КРЕДИТ</string>
    <string name="info_sum">Сума</string>
    <string name="time_of_credit">Строк кредитування</string>
    <string name="top_notif_text">Для гарантированного  одобрения кредита  оформляйтезаявку сразу  в нескольких компаниях</string>
    <string name="first_row_second">від 400 до 20 000 грн </string>
    <string name="second_row_second">від 1 до 27 днів</string>
    <string name="third_row_second">від 15 хв.</string>
    <string name="fourth_row_second">паспорт, ІПН</string>
    <string name="fifth_row_second">на карту</string>
    <string name="second_row_first">Строк  кредитування</string>
    <string name="third_row_first">Строк розгляду  заявки</string>
    <string name="forth_row_first">Необхідні  документи</string>
    <string name="fifth_row_first">Форма видачі</string>
    <string name="first_row_first">Сума</string>
    <string name="open_details">Подробнее</string>
    <string name="app_naim">МГНОВЕННЫЙ КРЕДИТ</string>
    <string name="non_inet">Отсутствует подключение к интернету!</string>
    <string name="pls">Пожалуйста перезагрузите приложение.</string>
    <string name="detailbutton">ПОДРОБНЕЕ</string>
</resources>