<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top_name_container"
        android:elevation="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textDetailsTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cyrvetica_extra_bold"
            android:gravity="center"
            android:text="@string/app_naim"
            android:textColor="#fff"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_main_container"
        android:elevation="5dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline34">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="10dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="150dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="10dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/text_bold"
                android:text="@string/needs_to_man"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline40"
                app:layout_constraintStart_toStartOf="@+id/guideline14"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline42"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="140dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/text_bold"
                    android:text="@string/first_row_first"
                    app:layout_constraintEnd_toStartOf="@+id/guideline42"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/text_semibold"
                    android:maxLines="1"
                    android:text="@string/first_row_second"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/text_bold"
                    android:text="@string/second_row_first"
                    app:layout_constraintEnd_toStartOf="@+id/guideline42"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/text_semibold"
                    android:text="@string/second_row_second"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline42"
                    app:layout_constraintTop_toBottomOf="@+id/textView25" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/text_bold"
                    android:text="@string/third_row_first"
                    app:layout_constraintEnd_toStartOf="@+id/guideline42"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView26" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/text_semibold"
                    android:text="@string/third_row_second"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline42"
                    app:layout_constraintTop_toBottomOf="@+id/textView27" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/text_bold"
                    android:text="@string/forth_row_first"
                    app:layout_constraintEnd_toStartOf="@+id/guideline42"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView28" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/text_semibold"
                    android:text="@string/fourth_row_second"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline42"
                    app:layout_constraintTop_toBottomOf="@+id/textView29" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/text_bold"
                    android:text="@string/fifth_row_first"
                    app:layout_constraintEnd_toStartOf="@+id/guideline42"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView30" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/text_semibold"
                    android:text="@string/fifth_row_second"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline42"
                    app:layout_constraintTop_toBottomOf="@+id/textView31" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline40"
                app:layout_constraintStart_toStartOf="@+id/guideline14"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/text_bold"
                        android:text="Штрафи" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/text_regular"
                        android:text="За весь час прострочення, включаючи день погашення Кредиту, може бути застосована процентна ставка у розмірі 2% від неповерненої суми кредиту за кожен день прострочення. За кожен 10-й (десятий) день прострочення нараховується." />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/text_bold"
                        android:text="Ставка на день" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/text_regular"
                        android:text="Щоденна: від 0,01 до 2,00%" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/text_bold"
                        android:text="Додаткова комісія за дострокове погашення" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/text_regular"
                        android:text="Додаткова комісія за дострокове погашення не  нараховується *" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/text_bold"
                        android:text="Типи працевлаштування" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/text_regular"
                        android:text="Тимчасово не працюючий, працюючий неофіційно, працюючий офіційно, працюючий офіційно менше 6 міс., працюючий офіційно більше 6 міс., працюючий офіційно  у фірмі через СПД, СПД, декретна відпустка, пенсіонер." />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/text_bold"
                        android:text="Вік" />

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/text_regular"
                        android:text="від 18 до 60 років" />
                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>